@@ -1,5 +1,8 @@
 2006-08-03  Derek Price  <derek@ximbiot.com>
 
+	* log_accum.pl: Change --debug_file to --debug-log or --debug-file, for
+	readability and consistency.
+
 	* log_accum.pl: Use proper Perl constants.
 
 	* log_accum.pl (get_topdir): Don't assume the directory list will be
